--- a/app/views/attendances/_attendances_edit.html.erb
+++ b/app/views/attendances/_attendances_edit.html.erb
@@ -98,7 +98,7 @@
                               <%= af.check_box :attendances_check %>
                             </td>
                             <td>
-                              <%= link_to "確認", user_path(params: {id: user.id, first_day: attendance.worked_on }), class: "btn btn-primary" %><!-- 確認を入れる -->
+                              <%= link_to "確認", user, class: "btn btn-primary" %><!-- 確認を入れる -->
                             </td>
                           </tr>
                           </tbody>
