--- a/app/views/attendances/_month_attendances_update_check_edit.html.erb
+++ b/app/views/attendances/_month_attendances_update_check_edit.html.erb
@@ -35,13 +35,13 @@
                           <td>勤怠を確認</td>
                         </tr>
                         <tr>
-                          <td><%= attendance.worked_on.to_s(:month) %>月</td>
+                          <td><%= attendance.worked_on.to_s(:month) %></td>
                           <td>
                             <%= af.select :month_confirmation, [["申請中", "申請中"], ["承認", "承認"], ["否認", "否認"], ["", ""],] ,class:"form-control" %>
                           </td>
                           <td><%= af.check_box :month_ok_check %></td>
                           <td>
-                            <%= link_to "確認", user_path(params: {id: user.id, first_day: attendance.worked_on }), class: "btn btn-primary" %>
+                            <%= link_to "確認", user, class: "btn btn-primary" %>
                           </td>
                         </tr>
                       </thead>
