--- a/app/assets/stylesheets/costum.scss
+++ b/app/assets/stylesheets/costum.scss
@@ -179,7 +179,7 @@ font-size:16px;/*検索ボタンのフォントサイズ*/
 .input-group {
   float: right;
   list-style: none;
-  margin: 30px;
+  margin: 10px;
 }
 
 #nav-search {
@@ -195,7 +195,9 @@ font-size:16px;/*検索ボタンのフォントサイズ*/
 }
 
 #nameserch {
-  position:absolute; right:260px
+  position:absolute; 
+  right: 275px;
+  top: 215px;
 }
 
 .users {
