--- a/app/views/bases/_formedit.html.erb
+++ b/app/views/bases/_formedit.html.erb
@@ -14,20 +14,17 @@
         <div class="col-md-6 col-md-offset-3">
           <%= form_with(model: @base, url: basis_path(@base), local: true, method: :patch) do |f| %>
 
-            <%= f.label :number, class: "label-#{yield(:class_text)}" %>
+            <%= f.label :number, "拠点番号"%>
             <%= f.text_field :number, class: "form-control" %>
 
-            <%= f.label :name, class: "label-#{yield(:class_text)}" %>
+            <%= f.label :name, "拠点名" %>
             <%= f.text_field :name, class: "form-control" %>
 
-            <%= f.label :atype, class: "label-#{yield(:class_text)}" %>
+            <%= f.label :atype, "勤怠種類" %>
             <%= f.text_field :atype, class: "form-control" %>
 
             <div class="center">
               <%= f.submit yield(:button_text), class: "btn btn-primary btn-#{yield(:class_text)}" %>
-              <button type="button" class="btn btn-default btn-<%= yield(:class_text) %>" data-dismiss="modal">
-                キャンセル
-              </button>
             </div>
           <% end %>
         </div>
