--- a/app/views/bases/_tr.html.erb
+++ b/app/views/bases/_tr.html.erb
@@ -2,7 +2,7 @@
   <td><%= base.number %></td>
   <td><%= base.name %></td>
   <td><%= base.atype %></td>
-  <td><%= link_to "編集", edit_basis_path(base), remote: true, class: "btn btn-success" %></td>
+  <td><%= link_to "編集", edit_basis_path(base), remote: true, class: "btn btn-primary" %></td>
   <td><%= link_to "削除", new_basis_path(@base.id), method: :delete, 
                          data: { confirm: "削除してよろしいですか？" } %></td>
 </tr>
