--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
               <%= link_to "拠点情報の修正", bases_path %>
             </li>
             <li>
-              <%= link_to "基本情報の修正", '#' %>
+              <%= link_to "基本情報の修正", basic_information_path %>
             </li>
             <% end %>
           <li class="dropdown">
@@ -32,12 +32,20 @@
               アカウント <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
-              <li><%= link_to "ユーザー勤怠情報表示", current_user %></li>
-              <li><%= link_to "設定", edit_user_path(current_user) %></li>
-              <li class="divider"></li>
-              <li>
-                <%= link_to "ログアウト", logout_path, method: :delete %>
-              </li>
+              <% if current_user.admin? %>
+                <li><%= link_to "設定", edit_user_path(current_user) %></li>
+                <li class="divider"></li>
+                <li>
+                  <%= link_to "ログアウト", logout_path, method: :delete %>
+                </li>
+              <% else %>
+                <li><%= link_to "ユーザー勤怠情報表示", current_user %></li>
+                <li><%= link_to "設定", edit_user_path(current_user) %></li>
+                <li class="divider"></li>
+                <li>
+                  <%= link_to "ログアウト", logout_path, method: :delete %>
+                </li>
+              <% end %>
             </ul>
           </li>
         <% else %>
