--- a/app/views/bases/_formedit.html.erb
+++ b/app/views/bases/_formedit.html.erb
@@ -24,7 +24,7 @@
             <%= f.text_field :atype, class: "form-control" %>
 
             <div class="center">
-              <%= f.submit yield(:button_text), class: "btn btn-primary btn-#{yield(:class_text)}" %>
+              <%= f.submit yield(:button_text), class: "btn btn-primary" %>
             </div>
           <% end %>
         </div>
