--- a/app/views/bases/index.html.erb
+++ b/app/views/bases/index.html.erb
@@ -15,7 +15,7 @@
     <td><%= base.number %></td>
     <td><%= base.name %></td>
     <td><%= base.atype %></td>
-    <td><%= link_to "編集", edit_basis_path(base), remote: true, class: "btn btn-success" %></td>
+    <td><%= link_to "編集", edit_basis_path(base), remote: true, class: "btn btn-primary" %></td>
     <td><%= link_to "削除", destroy_base_path(base.id), method: :delete, 
                          data: { confirm: "削除してよろしいですか？" } %> </td>
   </tr>
