--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -26,7 +26,7 @@
         <%= f.label :employee_number, "社員番号"%>
         <%= f.number_field :employee_number, class: 'form-control' %>
 
-        <%= f.label :uid, "カードID"%>
+        <%= f.label :uid, "カード番号"%>
         <%= f.text_field :uid, class: 'form-control' %>
 
         <%= f.label :password, "パスワード"%>
