--- a/app/views/attendances/attendances_log.html.erb
+++ b/app/views/attendances/attendances_log.html.erb
@@ -7,7 +7,7 @@
       <td>変更前退社時間</td>
       <td>変更後出社時間</td>
       <td>変更後退社時間</td>
-      <td>指示者</td>
+      <td>承認者</td>
       <td>承認日</td>
     </tr>
     <% @dates.each do |day| %>
