--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,7 +12,7 @@
 </div><!-- ここまで -->
 </div><!-- nav-left -->
     <div id="nav-search">
-      <p id="nameserch">ユーザー名検索</p>
+      <p class="nameserch" style="margin: -10px 0 -13px 16px;">ユーザー名検索</p>
         <%= form_tag(users_path, method: "get") do %>
             <div class="input-group">
                 <%= text_field_tag :name, params[:name], placeholder: "ユーザー名を入力してください", class: "form-control" %>
