--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -109,9 +109,11 @@
       <% end %>
     <%# 残業申請終わり%>
     </thead>
-    <%= link_to "勤怠を編集", edit_attendances_path(@user, @first_day), class: "btn btn-primary" %>
+    <%= link_to "勤怠を編集", edit_attendances_path(@user, @first_day), class: "btn btn-primary" %><br>
     <%= link_to "CSV出力", user_path(@user, params:{first_day: @first_day },format: :csv), class: "btn btn-primary" %><br>
-    <%= link_to "勤怠修正ログ(承認済)",attendances_log_path(@user, @first_day) , class: "btn btn-primary" %>
+    <%= link_to "勤怠修正ログ(承認済)",attendances_log_path(@user, @first_day) , class: "btn btn-primary" %><br>
+    <p class="koment">※勤怠表では、15分刻みで時間が表示されています。<br>
+                      ※CSV出力では、1分刻みで時間が記録されているため、正確な出社時間、退社時間が、分かります。</p>
     <% end %>
     <tbody>
       <% @dates.each_with_index do |day , i| %>
